# SuperScalar

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README-v0.2.0-draft.md  README.md  SECURITY.md  docker-compose.yml  gen_scripts.py  launch_exhibition.sh  regtest_extended.sh  regtest_full.sh  s16_driver.py  testnet4_full.sh  verify_onchain.sh
.claude/: CONFIRMATION_DEPTH_AUDIT_136.md  WT_RESTART_AUDIT_135_161.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
TEST_RESULTS_S1-S27/: S_TEST_INDEX.md
build-asan/: CTestTestfile.cmake  superscalar_bridge
build-fuzz/: CTestTestfile.cmake  fuzz_aead_decrypt  fuzz_hex_decode  fuzz_noise_handshake  fuzz_persist_load  fuzz_tx_sighash  fuzz_wire_parse_json  fuzz_wire_recv  superscalar_bridge  superscalar_client  superscalar_lsp  superscalar_watchtower  test_superscalar
cln-plugin/: CMakeLists.txt  README.md  blip56_codec.c  blip56_codec.h  superscalar_cln.c  superscalar_cln.h
doc/: adversarial-verification-matrix.md  revocation-verification-standard.md
docs/: GAPS_FOLLOWUP.md  accounting-chart-c.md  all-signet-txids.tsv  analysis-test-coverage-and-signet-readiness.md  cl4-rollover-remediation-plan.md  client-user-guide.md  cln-bridge-security-review.md  demo-walkthrough.md  deployment-coordination.md  design-production-roadmap.md  factory-arity.md  fee-race-pinning-1p1c-design.md  gap-scan-findings-2026-07.md  gaps-and-changes.md  improving-the-demo.md  jit-and-rollback.md  ln-gossip-plan.md  lsp-operator-guide.md  mainnet-audit.md  mainnet-gaps.md  mainnet-key-security.md  mainnet-runbook.md  minp2p-tx-backend-design.md  musig-stateless-audit.md  p6-bounded-nonce-retry.md  poison-tx.md  pre-mainnet-design-decisions.md  ps-subfactories.md  pseudo-spilman.md  release-plan-v0.1.0.md  release-process.md  rotation-ceremony.md  signet-exhibition-manifest.md  signet-k2-procedure.md  signet-ps-n8-procedure.md  signet-test-plan.md  test-harness-rigor-audit.md  testing-guide.md  testnet4-quickstart.md  trustless-completion-plan.md  (+11 more)
docs/coord/: musig-stateless-v0.2.md
docs/design/: colocation-test-manager.md  multi-tx-cooperative-close.md
docs/ptlc/: htlc-parity-and-build.md
docs/release-notes/: release-notes-0.2.0.md
docs/testnet4-phase5/: METHODOLOGY.md  README.md  sweep-back.sh
docs/testnet4-phase5/shape-3a-N8-ARITY3/: V1-commands.md  V1-results.md  V2-commands.md  V2-results.md  runner.sh  shape.md
docs/testnet4-phase5/shape-3b-N8-ARITY34-STATIC1/: V1-commands.md  V1-results.md  V2-commands.md  V2-results.md  runner.sh  shape.md
docs/testnet4-phase5/shape-3c-N64-ARITY248-STATIC1/: V2-commands.md  V2-results.md
docs/testnet4-phase5/shape-3e-N4-ARITY3-K2/: V1-commands.md  V1-lifecycle.md  V1-results.md  V2-commands.md  V2-force-close.md  V2-results.md  V3-chain-advance.md  V3-commands.md  (+6 more)
fuzz/: fuzz_persist_load.c
include/superscalar/: admin_rpc.h  backup.h  bech32m.h  bip158_backend.h  bip39.h  blinded_path.h  bolt1.h  bolt11.h  bolt12.h  bolt4_failure.h  bolt8.h  bolt8_server.h  bridge.h  chain_backend.h  chain_backend_rpc.h  chan_close.h  chan_open.h  channel.h  cheat_guard.h  circuit_breaker.h  cli_arity.h  client.h  cltv_watchdog.h  crash_inject.h  crypto_aead.h  dw_state.h  factory.h  factory_recovery.h  fee.h  fee_estimator.h  fwd_history.h  gossip.h  gossip_ingest.h  gossip_peer.h  gossip_store.h  hd_key.h  hold_invoice.h  htlc_accept.h  htlc_commit.h  htlc_fee_bump.h  (+65 more)
oss-fuzz/: Dockerfile  README.md  build.sh  project.yaml
src/: admin_rpc.c  backup.c  bech32m.c  bip158_backend.c  bip39.c  bip39_wordlist.h  blinded_path.c  bolt1.c  bolt11.c  bolt12.c  bolt4_failure.c  bolt8.c  bolt8_server.c  bridge.c  chain_backend_regtest.c  chain_backend_rpc.c  chan_close.c  chan_open.c  channel.c  cheat_guard.c  circuit_breaker.c  cli_arity.c  client.c  client_reconnect.c  cltv_watchdog.c  crash_inject.c  crypto_aead.c  dw_state.c  factory.c  factory_recovery.c  fee.c  fee_estimator_api.c  fee_estimator_blocks.c  fee_estimator_rpc.c  fee_estimator_static.c  fwd_history.c  gossip.c  gossip_ingest.c  gossip_peer.c  gossip_store.c  (+76 more)
test/sanitizer_suppressions/: lsan.supp  tsan.supp
tests/: bip158_debug.sh  econ_helpers.c  econ_helpers.h  spend_helpers.c  spend_helpers.h  test_adaptor.c  test_admin_rpc.c  test_adversarial_verify.c  test_backup.c  test_bip158.c  test_bip39.c  test_bolt1.c  test_bolt11.c  test_bolt12.c  test_bolt12_full.c  test_bolt4_failure.c  test_bolt8.c  test_bolt9_features.c  test_bridge.c  test_ceremony.c  test_chain_safety.c  test_chan_close.c  test_chan_open.c  test_channel.c  test_channels.c  test_cheat_guard.c  test_circuit_breaker.c  test_cli_arity.c  test_client_watchtower.c  test_close_spendability_full.c  test_cltv_watchdog.c  test_cpfp.c  test_crash_checkpoint.c  test_daemon.c  test_dust_recovery.c  test_economic_correctness.c  test_factory.c  test_factory_multi_input_keyagg.c  test_fee_estimator.c  test_fwd_history.c  (+65 more)
tests/interop/: interop_test.sh  test_reorg_regtest.sh
tools/: .env.example  activate_testnet4_ln_bridge.sh  bip158_integration_test.c  cln_plugin.py  dashboard.py  docker-entrypoint.sh  docker-install-wsl.sh  exhibition_B_legible.sh  exhibition_distribution_signet.sh  exhibition_jit_signet.sh  exhibition_ladder_test.sh  exhibition_signet.sh  exhibition_testnet4.sh  inspect_factory.py  manual_tests.py  multi_arity_scenario.py  passive_wrap.sh  recover_exhibition_funds.py  recover_stranded_coop_output.c  regtest_full_regression.sh  regtest_full_regression_v020.sh  regtest_hifee_helpers.sh  regtest_test_helpers.sh  reset_regtest.sh  run_demo.sh  run_remote_client.sh  run_rigor_matrix.sh  run_unit_tests.sh  setup_regtest.sh  signet_diagnose.sh  signet_k2_campaign.sh  signet_setup.sh  signet_strong_keygen.py  state_recorder.py  superscalar_bridge.c  superscalar_client.c  superscalar_factory_residual_sweep.c  superscalar_lsp.c  superscalar_lsp_post_daemon_tests.inc  superscalar_lsp_pre_daemon_tests.inc  (+107 more)
tools/deploy/: cln-bridge.conf.example  cln-peer.conf.example  superscalar-lsp.service  superscalar-watchtower.service
(+22 files in other folders)
